Udarbejd kalender-widget og finpudsning af API
